--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.7.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
